--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
   ],
   "require": {
     "php": "^7.1",
-    "friendsofphp/php-cs-fixer": "2.7.*"
+    "friendsofphp/php-cs-fixer": "^2.7"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.0"
