--- a/composer.json
+++ b/composer.json
@@ -12,20 +12,13 @@
     "php": "^7.1",
     "friendsofphp/php-cs-fixer": "^2.7"
   },
-  "require-dev": {
-    "phpunit/phpunit": "^7.0"
-  },
   "autoload": {
     "psr-4": {
       "AdamWojs\\PhpCsFixerPhpdocForceFQCN\\": "src/"
-    },
-    "exclude-from-classmap": [
-      "/src/Tests/"
-    ]
+    }
   },
   "scripts": {
-    "fix-cs": "@php ./vendor/bin/php-cs-fixer fix src -v --show-progress=estimating",
-    "run-tests": "@php ./vendor/bin/phpunit -c phpunit.xml.dist"
+    "fix-cs": "@php ./vendor/bin/php-cs-fixer fix src -v --show-progress=estimating"
   },
   "extra": {
     "branch-alias": {
