--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,13 @@
     "php": "^7.1||^8.0",
     "friendsofphp/php-cs-fixer": "^3.0"
   },
+  "require-dev": {
+    "phpunit/phpunit": "^9.5"
+  },
   "autoload": {
     "psr-4": {
-      "AdamWojs\\PhpCsFixerPhpdocForceFQCN\\": "src/"
+      "AdamWojs\\PhpCsFixerPhpdocForceFQCN\\": "src/",
+      "AdamWojs\\PhpCsFixerPhpdocForceFQCN\\Tests\\": "tests/"
     }
   },
   "scripts": {
